cryptsetup (2:2.3.3-3+exp3) UNRELEASED; urgency=medium

  * d/control: Make cryptsetup-suspend explicitly depend on
    initramfs-tools-core as we use unmkinitramfs(8) in the wrapper.
  * systemd-suspend.service override: Set OOMScoreAdjust to -1000 to
    disable OOM killing of processes of the unit.  Thanks, ಚಿರಾಗ್.
    (Closes: #968569)

 -- Guilhem Moulin <guilhem@debian.org>  Sun, 30 Aug 2020 23:00:17 +0200

cryptsetup (2:2.3.3-3+exp2) experimental; urgency=medium

  * d/control: Typofix in cryptsetup-suspend's long description.
    (Closes: #968455)
  * d/control: Make cryptsetup-suspend explicitly depend on kbd as we use
    openvt(1) in the systemd-suspend.service override. (Closes: #969226)
  * d/*: Run wrap-and-sort(1).
  * d/scripts/suspend/cryptsetup-suspend-wrapper:
    + Parse /proc/meminfo in a single pass using shell builtins rather than
      calling awk(1).
    + Use "/boot/initrd.img-$(uname -r)" as path to the initrd instead of
      deriving it from the kernel command line.  BOOT_IMAGE's value is
      relative to the boot's loader viewpoint, which might differ from that of
      the main system.
    + run_dir(): Prefer find(1)'s -execdir option over -exec.
    + Conditionally remove/copy firmware into the initramfs image.
      (Closes: #969270)
  * d/rules: Build our scripts with `-Wall -Werror`.
  * d/cryptsetup-suspend.{postinst,postrm}: Call `systemctl daemon-reload`,
    which appears to be needed on upgrades.  (dh_installsystemd(1) doesn't
    support overrides so we manually copy the snippet it would add.)

 -- Guilhem Moulin <guilhem@debian.org>  Sun, 30 Aug 2020 18:01:49 +0200

cryptsetup (2:2.3.3-3+exp1) experimental; urgency=medium

  * Add new binary package 'crypsetup-suspend', which implements support
    to luksSuspend LUKS devices before ACPI S3 system suspend.
    + See the cryptsetup-suspend(7) manpage for further information.

 -- Jonas Meurer <jonas@freesources.org>  Wed, 12 Aug 2020 21:29:31 +0200
